--- a/pom.xml
+++ b/pom.xml
@@ -39,11 +39,11 @@
 		</dependency>
 
 <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.9.1</version>
-        <scope>test</scope>
-    </dependency>
+  <groupId>junit</groupId>
+  <artifactId>junit</artifactId>
+  <version>4.11</version>
+  <scope>test</scope>
+</dependency>
 
 	</dependencies>
 	<build>
